[tool.poetry]
name = "hash_table"
version = "0.1.0"
description = ""
authors = ["Roman <roman.korolev@teraki.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nimporter = "^1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
